--- a/modules/system/emacs/doom/config.org
+++ b/modules/system/emacs/doom/config.org
@@ -55,7 +55,6 @@ numbers are disabled. For relative line numbers, set this to `relative'.
 (setq projectile-project-search-path '("~/projects") projectile-sort-order 'recentf)
 #+END_SRC
 * EXWM
-#+BEGIN_SRC elisp
 ;; (use-package! exwm)
 ;; (exwm-enable)
 ;; (use-package! exwm-systemtray)
@@ -89,7 +88,6 @@ numbers are disabled. For relative line numbers, set this to `relative'.
                                             (interactive (list (read-shell-command "Launch program: ")))
                                             (start-process-shell-command command nil command))))
       )
-#+END_SRC
 * Shell things
 #+BEGIN_SRC elisp
 (setq shell-file-name (executable-find "bash")) ;; doom doctor said this.
@@ -146,41 +144,39 @@ change `org-directory'. It must be set before org loads!
 #+END_SRC
 * Splash screen
 #+BEGIN_SRC elisp
-; (defun for-all ()
-; (let* ((banner '("WWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWW"
-;                  "WMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMW"
-;                  "WMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMW"
-;                  "WMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMW"
-;                  "WMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMW"
-;                  "WMMMMMMMMMMKxOWMMMMMMMMMMMKd0WMMMMMMMMMW"
-;                  "WMMMMMMMMMMX:.xWMMMMMMMMM0,,0MMMMMMMMMMW"
-;                  "WMMMMMMMMMMMX:.dKKKKKKKKk,,0MMMMMMMMMMMW"
-;                  "WMMMMMMMMMMMMX:.,looooo:.'0MMMMMMMMMMMMW"
-;                  "WMMMMMMMMMMMMMX:.xWMMM0,,0MMMMMMMMMMMMMW"
-;                  "WMMMMMMMMMMMMMMX:.xWM0,'OMMMMMMMMMMMMMMW"
-;                  "WMMMMMMMMMMMMMMMX:'ld,'OMMMMMMMMMMMMMMMW"
-;                  "WMMMMMMMMMMMMMMMMK;  'OMMMMMMMMMMMMMMMMW"
-;                  "WMMMMMMMMMMMMMMMMMKdlOMMMMMMMMMMMMMMMMMW"
-;                  "WMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMW"
-;                  "WMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMW"
-;                  "WMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMW"
-;                  "WMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMW"
-;                  "WMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMW"
-;                  "NWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWN"
-;                  ))
-;        (longest-line (apply #'max (mapcar #'length banner))))
-;   (put-text-property
-;    (point)
-;    (dolist (line banner (point))
-;      (insert (+doom-dashboard--center
-;               +doom-dashboard--width
-;               (concat line (make-string (max 0 (- longest-line (length line))) 32)))
-;              "\n"))
-;    'face 'doom-dashboard-banner)))
+(defun for-all ()
+ (let* ((banner '("WWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWW"
+                  "WMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMW"
+                  "WMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMW"
+                  "WMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMW"
+                  "WMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMW"
+                  "WMMMMMMMMMMKxOWMMMMMMMMMMMKd0WMMMMMMMMMW"
+                  "WMMMMMMMMMMX:.xWMMMMMMMMM0,,0MMMMMMMMMMW"
+                  "WMMMMMMMMMMMX:.dKKKKKKKKk,,0MMMMMMMMMMMW"
+                  "WMMMMMMMMMMMMX:.,looooo:.'0MMMMMMMMMMMMW"
+                  "WMMMMMMMMMMMMMX:.xWMMM0,,0MMMMMMMMMMMMMW"
+                  "WMMMMMMMMMMMMMMX:.xWM0,'OMMMMMMMMMMMMMMW"
+                  "WMMMMMMMMMMMMMMMX:'ld,'OMMMMMMMMMMMMMMMW"
+                  "WMMMMMMMMMMMMMMMMK;  'OMMMMMMMMMMMMMMMMW"
+                  "WMMMMMMMMMMMMMMMMMKdlOMMMMMMMMMMMMMMMMMW"
+                  "WMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMW"
+                  "WMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMW"
+                  "WMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMW"
+                  "WMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMW"
+                  "WMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMW"
+                  "NWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWN"
+                  ))
+       (longest-line (apply #'max (mapcar #'length banner))))
+   (put-text-property
+    (point)
+    (dolist (line banner (point))
+      (insert (+doom-dashboard--center
+               +doom-dashboard--width
+               (concat line (make-string (max 0 (- longest-line (length line))) 32)))
+              "\n"))
+    'face 'doom-dashboard-banner)))
 
-; (setq +doom-dashboard-ascii-banner-fn #'for-all)
-
-(setq fancy-splash-image (concat doom-private-dir "splash.png"))
+(setq +doom-dashboard-ascii-banner-fn #'for-all)
 #+END_SRC
 * Making predictions and bets
 #+BEGIN_SRC elisp
@@ -230,37 +226,13 @@ change `org-directory'. It must be set before org loads!
 #+END_SRC
 * Auth for APIs
 #+BEGIN_SRC elisp
-;(setq auth-sources '("/home/qd/projects/declare/secrets/authinfo.gpg"))
-;(defun my-retrieve-openai-api-key ()
-;  "Retrieve the OpenAI API key from the authinfo file."
-;  (require 'auth-source)
-;  (let ((creds (auth-source-search :host "api.openai.com"
-;                                   :user "apikey"
-;                                   :max 1)))
-;    (if creds
-;        (let ((secret (plist-get (car creds) :secret)))
-;          (if (functionp secret)
-;              (funcall secret)
-;            secret))
-;      (error "No API key found for api.openai.com in authinfo"))))
-;; (use-package! gptel
-;; :config
-;; (setq! gptel-api-key (funcall 'my-retrieve-openai-api-key)))
-
-;(after! auth-source
-;    (setq gptel-api-key (auth-source-user-and-password "apikey"))
-; )
-;; (gptel-api-key-from-auth-source)
-;; (setq gpt-openai-key "")
-;; (setq gpt-openai-engine "gpt-4")
-;; (setq gpt-openai-use-chat-api t)
-;; (setq gpt-openai-org "org-5p...Y")  ;; NOT SET
-;; (setq gpt-openai-max-tokens 2000)
-;; (setq gpt-openai-temperature 0.0001)
+(setq auth-sources '("/home/qd/projects/declare/secrets/authinfo.gpg"))
 #+END_SRC
 * Other LLM things
 #+BEGIN_SRC elisp
-; (setq )
+(auth-source-search :host "api.openai.com" :user "apikey")
+(use-package! gptel
+ :config (setq! gptel-model "gpt-4-0613"))
 ;; accept completion from copilot and fallback to company
 (use-package! copilot
   :hook (prog-mode . copilot-mode)
@@ -272,7 +244,7 @@ change `org-directory'. It must be set before org loads!
 #+END_SRC
 * company completion: nixos options
 #+BEGIN_SRC elisp
-(add-to-list 'company-backends 'company-nixos-options)
+(add-to-list 'company-backends 'company-nixos-options 'company-coq)
 #+END_SRC
 * Direnv
 #+BEGIN_SRC elisp
