--- a/modules/system/emacs/doom/config.org
+++ b/modules/system/emacs/doom/config.org
@@ -97,7 +97,7 @@ numbers are disabled. For relative line numbers, set this to `relative'.
                         ("vterm-clear-scrollback" vterm-clear-scrollback)
                         ("dired" dired)
                         ("ediff-files" ediff-files)))
-                                        ; (custom-set-variables explicit-shell-file-name "/run/current-system/sw/bin/fish")
+(custom-set-variables explicit-shell-file-name "/run/current-system/sw/bin/fish")
 #+END_SRC
 * Defaults for startup
 #+BEGIN_SRC elisp
@@ -237,22 +237,20 @@ change `org-directory'. It must be set before org loads!
 (use-package! copilot
   :hook (prog-mode . copilot-mode)
   :bind (:map copilot-completion-map
-              ("right" . 'copilot-accept-completion)
               ("<right>" . 'copilot-accept-completion)
-              ("C-right" . 'copilot-accept-completion-by-word)
               ("C-<right>" . 'copilot-accept-completion-by-word)))
-(after! (evil copilot)
-  ;; Define the custom function that either accepts the completion or does the default behavior
-  (defun my/copilot-tab-or-default ()
-    (interactive)
-    (if (and (bound-and-true-p copilot-mode)
-             ;; Add any other conditions to check for active copilot suggestions if necessary
-             )
-        (copilot-accept-completion)
-      (evil-insert 1))) ; Default action to insert a tab. Adjust as needed.
-
-  ;; Bind the custom function to <tab> in Evil's insert state
-  (evil-define-key 'insert 'global (kbd "right") 'my/copilot-tab-or-default))
+;(after! (evil copilot)
+;  ;; Define the custom function that either accepts the completion or does the default behavior
+;  (defun my/copilot-rightarrow-or-default ()
+;    (interactive)
+;    (if (and (bound-and-true-p copilot-mode)
+;             ;; Add any other conditions to check for active copilot suggestions if necessary
+;             )
+;        (copilot-accept-completion)
+;      (evil-insert 1))) ; Default action to insert a tab. Adjust as needed.
+;
+;  ;; Bind the custom function to <tab> in Evil's insert state
+;  (evil-define-key 'insert 'global (kbd "<right>") 'my/copilot-rightarrow-or-default))
 #+END_SRC
 * company completion: nixos options
 #+BEGIN_SRC elisp
