change doom splash

--- a/modules/system/emacs/doom/config.org
+++ b/modules/system/emacs/doom/config.org
@@ -144,39 +144,135 @@ change `org-directory'. It must be set before org loads!
 #+END_SRC
 * Splash screen
 #+BEGIN_SRC elisp
-(defun for-all ()
- (let* ((banner '("WWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWW"
-                  "WMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMW"
-                  "WMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMW"
-                  "WMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMW"
-                  "WMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMW"
-                  "WMMMMMMMMMMKxOWMMMMMMMMMMMKd0WMMMMMMMMMW"
-                  "WMMMMMMMMMMX:.xWMMMMMMMMM0,,0MMMMMMMMMMW"
-                  "WMMMMMMMMMMMX:.dKKKKKKKKk,,0MMMMMMMMMMMW"
-                  "WMMMMMMMMMMMMX:.,looooo:.'0MMMMMMMMMMMMW"
-                  "WMMMMMMMMMMMMMX:.xWMMM0,,0MMMMMMMMMMMMMW"
-                  "WMMMMMMMMMMMMMMX:.xWM0,'OMMMMMMMMMMMMMMW"
-                  "WMMMMMMMMMMMMMMMX:'ld,'OMMMMMMMMMMMMMMMW"
-                  "WMMMMMMMMMMMMMMMMK;  'OMMMMMMMMMMMMMMMMW"
-                  "WMMMMMMMMMMMMMMMMMKdlOMMMMMMMMMMMMMMMMMW"
-                  "WMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMW"
-                  "WMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMW"
-                  "WMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMW"
-                  "WMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMW"
-                  "WMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMW"
-                  "NWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWN"
+(setq phaesp-banner '("......................................................................................................................................................................................................................................"
+                      "...:.....:.....:....::.:::..........:.......:.......::......::::.............:...::.......:.:....:..................:...............:..........:.:..........::....:..:...:....:.:..:.::..:::..::::...::.:....:::..:...:.:..:.:...::.:."
+                      "...................:...::..........:.:......:.:.:..:......:...::..:..........:::...:...::::..:..:.............::............::..:........::::..:.:......:......:..::..::::.:....:..::........:..::::..:.............:....:.:.::..:::.."
+                      "....:...:...:..:....::..........::......:..::.:..:.::.::.:................:::...:..:::::::....:::::..::.:::::...:.......:.........:..::::..::..:.::...:::.....:::........:.:::........:......:......:...:..............:.:..:::.::::.."
+                      ".....::.::...:..:..:.:.::.......::..................:....:...........:.::::::....:::::.....:..:..::::..::....:.......::...::.:.:::.::::::.:...::....::...::::::.:........:::.:.:..:::.:.....::...:::...:....:...::....:::::::...:....."
+                      ".::.:.....:.....:..:..:..:.:...:..........:..:....:::....:..:..:.:::......::.............:.:::..:.:..:.....:..::::..:...:::..:::.-+*=:...:::.:::::::...:....:...::::::....:.:.....:........:.....................:....::.:..:...:..::."
+                      "...:.:.::::..:...:.:......::.....:..........:...........:::.::::..::..::..:.::::::.......:::::..:..:.:::.::::..:::::...::::.:.::.-*=+--.::.:::.:::::.:::.::::::.::.::::::...:...:..:....::::..:..........:.:.....:..........:....::..."
+                      "....::::.:......:....:.........:::....:::::::::..:....:::.::..:::...:::::...::.::.::.:::....:.........:::::::..:..:::.:....:::.::-+==---::..:::.....::...::::.::.....::::...:.:..:..::..:.....:...:.....::....:..........:............"
+                      "....:.:..:::................:.:...:..:..:::...:::..::.:...::..:..:::::::::::.:....::::::::.::::.:.............:.....:::....:::...:==+#+:::::...:::::::::....:.......:..::::..::...........:.:.:................::.....:........:.:::.."
+                      "...:....::::..............::::.....:::.................::...:::..:::.:::::::..::::.::..::::::::::::........::.........:.:.....:..:=*###:..:::::::::::::::::.:::.::.::::..::..::::.........::...:...:.:..::.....:...........::::..:.:.."
+                      ".:.:......:.....:..:::...:.::..:............::...::..::::..:::::..::::::::::::::::::::::::::::::.::::::::::::::::....::...::::::::=*###:::::::::::..:..:::::::::::::::::.::.:.......::..........:..:::..:.:......::........::...:::..."
+                      ".:.:..:..:......:.......::..:........:....:..:::...::::..::::::::::.:::::::::::...::..::.....::::::::--:::::....:::::::::::.::.::::=*+=.::::::::::::::::::::::::...:..::..:..:......:....:..:......:.............:..........:::......."
+                      "......::::::...::..............::.:.::...:::::.::::::::.:::::::::::::::::::::::::::::::::::...:::::::...:::::.::::::::.:::::...:::..:::::::::::::::--::::::::::::::::::...::..:............:..........:..:.::.:...:..................."
+                      "....::....:....:.:............::::..::::::::::..::::::::::-::::::::--:-:::::::--::::::::::::::--::::::..::::::::::..:..::::::::::.::---::::--::::::::::::::::::::::.:::::..::::::.::..:::.........::...::.:.:..:...............:......"
+                      "...........:...........::.....:.::.:......:::......:::::::::::::-------:::::::::--::::.::-----:::::.:::::.::::..:::::::::::::::::::--:::::::::---::::::::::::::::::.:::........::..:::...............:..::...:.....:................:."
+                      "..:...:.:...:::....::::..:::.::.:..:.:::..:..::...:::.:.::.:::::::---------------::::::----:::::-:::::.:::::-::..:::::::::::::::::::.::---:::----:::::----:::-:::::::::::......:.....:...::...........:...:.....::....:......:......:."
+                      ".:.:....:.:.:..:.............::....:.:::::...:::::--::::::..:.+@@@#*+=-----------::------::.::---:::.:...::::::-::::::::::::::-::::::--::------:---::---------:::::.:::..:............:..::::::........:...::....::.....::::........:."
+                      ".::..:...:....::....:........:.:.......:...:.:.::::...::::.:::@@@@@@#+===------:---------:::::::::::..:..:::.:::::::.:::::::::::-------:-------------=-:::::-:::-:.......::::....:::..........:..::..........:....::..:::.:..........."
+                      ".............::.::::::::.....:::.::::.::::.:.::...::...:::-:--@@@@@%*++===----::---:::---------::::-::::-:..:::::::::----::::.:::------------------=----::-----::-:....:::::::::::.:.::..:.........:.:.:.:..:::....::....:..........:."
+                      ".:.......:....:::.:...:......:.:::..:.::.::..::.:::::--::.:---@@@@@%#+==---=-----------=--=--------:::::::::.::--::::-::::::::---------------------------------::::::::.:.::.:::.........:..:........:.:..::...::...:................."
+                      "......:::...:.:::::.:.:...::::::....::..:.:::::.:::::::::-----@@@@%#*=====--==-%@@@@@@@@@@@+=------:::.:::--::::-:.:::--::----==---------=====-------------::---::-::::::..:..:..:.::....:.....:...........:::::.:.......:..:........."
+                      ".........:::...:.::.:::..:::::....::.::::..::..:::::::::-----=@@@@%#+==-==-----@@@@@@@@@@@@==-------:--::::-------------------------===-====-=---====-------::::::::::::::..:::..::.......:::...:::.............:.::.:.......:.::..:.."
+                      "...............::....::..::......:::.::::.:::::::-:::------==+@@@@%*+--===----*@@+:-=+##*@@=--------::::::::---:------:-----------===---==------===----------:::::..:::..::...:::.:........:::....:......:.....::::..:....::.:..:.:..."
+                      ".........:..:..:.:::::.:::...::.::..:::::::.::-::::---====++++@@@@%*=-=+======@@@%%%%%%%%@@#---------:::::::::::::---------------=-----=====---==--------------------::::::::..::.:.::..:....:......:.....::....::..:..:.:.:.:.:..:..."
+                      "......:..::::..:.:..::..........::::::::--:::::::--=++*@@@@@@@@@@@@@@@@@@@@@@@@@@***###*#@@@::-::--:----::-:.:-------------------====-===========------------:::-:::-:::::::::....:...:.:....::....::...............:..:.:....:......."
+                      "........::....::....::..:::.....:::::::::::------=@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@----==+==@@%:--::--:--::-::::----------------=-==----==============------------::-:::::-::::::::::::::::.:....:::....:...::..:.....:.:.:.:........:..."
+                      ".....::::.....:.:::..:.::...::::::..::::.:------==@@@@@@@##@@@@#.-#*+@@@@@-...:::::::----@@=--:::------:::::-----------------==----==++====++========----------------::-:::::-::-::::..:..::..::::.....::::........:.:.:......:......."
+                      "..::::::......:::::::.:::..::::::::::::::-----:---@#@@@@-=@@@@@@:.=:+@@-@@-..........::::@@@@=::.:-----:::::---------------------==++==============-==---------------:::::..::..:::::..:::::....::::...........:..:............:..:..."
+                      ".........:....::-..::::...::.::::::..::-:::::::---%%-@@@..@@@@@@:.+=+#@@@@...............@@-@+-:::.:--::-----------------------==================-====----------------:--::::::::::::-::::::::.......::..:......:...:.:..............."
+                      "......:::.....:::::::::.....:.::..:.::::..::::-----@@@@-.:+=@@@+.:@@@-@%@%@%+::--:.......@@@@=::::::--::--------------===--=====+==+=============-=+=-----------------:--::---::::::.:::-:.:::::.......:::..:..:........::...::....::."
+                      ".....:::::::.......:::..::.::..:..::::::::::-:---::@@@@.-+@@+*+..*@@@=@=@@@@@@@@%=......:@@=-::.:::.:--::::::--:::----================++++=++========---===-----------:---::::-::::::.::::..:..::......:::..................:.:....:.."
+                      ".:.:.:............:..::....::.::::::..::::::::-----@@@@:#@@@@@+:.#@@@*%%-+*@@@@@@*......:@@+@#:::.:..:-::::-----:-----=============+=+++==++=======-========---------------------::--:..:::.:..::.....:...:...........:...:..::....::."
+                      "..:..:..:......:::.:.:....:::.::::::.::.::-::------@@@==@@@*@@*::+@-@=%#=-+-:-=@@#......=@@@@@.:.::::.::-----------===========---=++++++=+=====++=-===++==--------:-------=-------::::.:::.:..:::....::...:....:......:..............."
+                      ".:............::..:.....:::::.:.::..:::.:::-.--:---@@@.+@@@@@@+::-@+@#%==-+@@@@@@#......#@@+:@:::.:::..:---------=--===---===--===++++++++==--++=--======-=---------=-=====----:--::-:.::..::::..:...:...::...........::....::........"
+                      "..:....:......::...:.::.:.::..::::..::..:::-:--:-=-@@@.=@@@@#-::::@=@#@%##@@@@@@%=......%@@@*@---:-:::.:-::--------====-----======+**+***++=-=++======---====-===========------::-::::.:::::..:..:..:....:.............::....::......."
+                      "...:..........:.......:...::.::.::::::..:-::::---=%@@@.:::.......:@-@-+%@@@%=:.:--==--+@@@@@%@..:-:::::--::-------====----=======++######++========------=====++==+===---:-----:---:::::.::..:..:...:....:::....:.:..:.::::.....:....."
+                      ".....:..:.....:..::....:..::..::..::..:.::--:---:-@@@@.....:+%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@+*+::.::::-----------===-==------====++*#%###***+===+++=----====++++++==----:-------:--:::::..::.::::::..:...............:..:..:......:...."
+                      "...:.:........::..:.:::...:::..::..:::::::--:---:-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@----:.-::::------=--=====---====-===+*#@@@@@%#%%*++++=====+++++++=====------:::------:------::::.:::..:..:...............:....::....::....."
+                      ".....:...........::.:.::::.::..::..::::.:-:----==-@@@@@@@@@@@@@@@@@@@@@%--==--::--------:.::.::.--:::::--------=------========+##@@@@@#*+##*+++==++**+++==-----=======----------:::::-:-=##=-:-::::.:..:.........:..:.........:.::...."
+                      ".::::.....:::::..:..::....::..:::::::::-:----=----=++====-*-#=-=-=+%@@@--=------------::::..:------:-:---------=-----=======+++*#@@@+--*#*++++*++++++==---=-:--===++---::--:-----::::::-*###-::.::.::..:.........:.....:.....:.....:.."
+                      ".:....::...:..:..::...::::.:.:::--::-::::::-:-----:-=====+=++:-=-+@#---------------::::-::::::-------::--------=-----==-===+++#@@@@*-:-#%+=+++#*=--========----==+*@+--..---::--::::.:::%@@@+:::::.::..............:................:."
+                      ".::..:.:...:..:....:..:.:.:-::::::..--::::.:-::----::---=#-+:----+#-----:::-------:::::::.:::-----.::::-------=------======++@@@@%=-..:+%#+=--=+==+*+++====-==-==+-@#-:.::--::--.:::::::@@@@@.::::::::..:.........:.................:."
+                      "..:..:.:...:.:.::::..:..:..::::.:::::.::::.:::::---::---+#:=::---+#-=-:---:::::--::----::::::-=--:.:-=====-----------====+++@@@%=:.....=**+==+##*+++====----=*+*+##@#-:::------::::-:.::@@@@%.:::.::.....:..::::..:.:..:.............."
+                      "..:::......:....::...:...:.:::::::+@@@@=:.::-:::::---=-=+*-=-=+=-+#:=------:-:.:-----:::..::.-+---:-=+====-------=-====++++#@@+:.......=%%%#***++======-----+*+++#@%=:-:.-:--::-::::::::+@@@+::::.::..::......:...::....:.....:...:..."
+                      "...::......:::...:..::::::.:.::.::*@*=**::::-::::.:-+-==##==-+-=-+#*+*--:----::-::::::.:.:::-+=-:--=+=-----=---====+++*****%%%*:.......+@@#++++==-===---------------::-::---:::-:::::-::::..::.::.::....:..............:..:...::::..:."
+                      "..::....:.::..::.::::....:::::..::+@%@@+.:..-::-::::=##@@*=+:==-:*#%-%--::::---==:::-..-:::-++=---====-==--=====++++++++===#=+%:.....:=#@@+======--=-:------------:----:--=-:---------:::...::.:::::....:.::........:.::........::...."
+                      "....:.::::--------::.::.::...:...::@-@-:.:::--:::----@@%+:+=---:-*##=%:------:+-+:::::.:::::=*----===--==--==========--===+##%@+-::-+%@@@@+======--=-:-=---------------:-==--------:::..:::::::.::..::.....::....:.....::......:.:.:.."
+                      ".--:::-----------------=-::::.::::%=#:.::..:::::::*@@#@=:++-----+#+-*.:+-==-:=++.:.:::::.:--===---==------==------==+======+%@#==+#@@@@#*======-----:-=---=+=-==----------:--::::::.:::..::::..:....:...:::....::......:.....::....:.."
+                      ".::-----:::::..:::--=-==++=-::::..:=+--:.::.:::.:::@@@@@+-++=-:--=*===::++-+=-:--:::..:::.:-++-=---==----::----========--==++#%%##%@@@#++=---===--=----=--:-++---:::-:---::--:.::::..::...:::.::.....:..::.:::..:.::..::.:::...::...:."
+                      ".:.:::..::.::..:::--====---===:--:::=-=::.::.-:.:::#@@-@%=+-:-:-.=*:--::-++===-=:-.:::-----=@@@+-.----::-----======--=++=-:=+**+###%@#*++-.--=------:------=+=----::----::---::-::::.:::.::::.::::--::::::::-::..:.::.:::..:::..:...:."
+                      ".:-:.:::.:.:::-:::--:-=======+-.:::.#+#.:.::.-::.:-#*#=%#@*=-=---++:-::.:+==:===.-:.-::-::-+@=@==--:=-.-===------==+++=----:+#==**##%*==--=+=-------::-----=------------:--:-::::::::---::::::::::..::::::...:.:.......::.....:..::..."
+                      ".:.:::::.:::---.-:------:===-==:.:::@-@:.:--:+++::-#=%-+=%@%**++**--:--::==-==+=.:::-::-:--+@@@==+-=+=--::::--===++=--*##*+-+###*++++=--:-----=--=============-----------:-::--:::::::::::-::....:::::::..::::.......:.........:::...."
+                      ".:::.:::::::-:-.-::=-.-=+++=-=-:::..@:@:.::::#:+--:+++=+#===+*+++-----:::-+===-========++=:@@%-:===+#*:-----=====--+#%%*=-==-===---==--+********+*++++*+++++=====----------------------:::::::::::.:.::..:::.:::....:..:.....::....:.."
+                      "..:-:::::.::::::---==-=---=:-=-:----%:%=-==+==+-=:-++++-:-=-=-:-:::-:------==+=-=+*##%%%##+@=@***===*+::---====--.::===*#+===+++++*###%%%%%%##****++*+++====----::------:-:::-----:::::-----:::::::::....:..:........::........:::...."
+                      ".::::.::::::.:.:=---=+===-::=-----==+-+++====-==-=#*+=+=-===-=-=.::::-:=%@@@*=*+***##%%###@@+@@@@@@@#=-=+***+=:-====+=-=#%%%%###%%%%%##+===-==------=-----=-------====-:::.::::-:..:::::.:::...::.:...:::::::...:.::....::::.......::."
+                      ".....::--::--:::-==-=-:--------=------.---:-.---:*%=+=*+@@=%@%%@@@@@@@@@@@@@@%+=-=@@%#**++@@@--:--:=--:==-::-+*#%@@%%+===+++++++++++++=====-------:----------------::::..-------:..:..:::::.::..:....:..:::::...::::::::..:::..:::...."
+                      ".--::.:--------::::::::::::.:-::.:+%@@@@@#@@@@@%#++@@@+#@-@#*@@%@@@@@@@#--+@@=--%%%#+####@@@@@@@@@@#**##%%@@@@@%%#++====+=++==++++++=====---------===-----::-:--.:-----=---:--:::.:...::...::..:..::..::.........:..::................"
+                      ".:::::::::-----------====--=-:-----+#*=::#-@==+++=--++@+%@=%@#@@@@@@@@@@@@@@@#:.:#@@@@@@@@@@@@%%%%%#***+#%%%%%#*+=+==================-------=-==+++==-------====--=--=-----:.::...:::::::..:....::....:......::...........:.::..:::::."
+                      ".::::::----::------------==-=-=-:--+@@@@@@@@@@@@@%%@@@@++-=-*%@@#%@@@@@@@@@@@@@%%%*=+##****+++====----=+###*+++======-====--=====--=-=----====+++====-------=--------:::.::::::.::::::::.:.:..:.........::.....:.....:...::.::.::.:..."
+                      ".:.:::....:...:....:...::-**=-=**+++*#%#++*#####%%%%%%#+###+-=+++=-:-=+++++=========-:---------:------+++====----------==========-=--====++==++=-----::::----::-::-:.::..::.::..:::::.....::::..::::..:..:....::........::..:..:......"
+                      ".....:::......::..:....::::--------------=------===--==-----:-::::::-:::::..::.:::--:----::::-----:-=++===--------------========-========+===------::.:------:-----:.:::.::.::::::::::.::::::..::...:...:.....:.......:.....:..::::::."
+                      ".:.::.......::.::::....::.......:::...:::-:::::-::::.:::..:.:::::::::-----::-----------------------====-------------==----=======+=+++===----------=====-----:--------::--:.::.::.....::..:...:......:::..........::..:....:..:...:.:."
+                      ".:.::::::..::......:....:......::::.::::::::..:.::::::.::::..::::::::::::::::::::::.:::::-----:-======----=-----------=-====-=++++===---:--::::----====---------::::::-::::.::.::..........::::.:.::.::.......:::::::..:.:.:......:.:."
+                      "...:.........::.....:::.::.:::::::::::....::......:..::::::..::::::::::..:::..:...:.:::::--:--==++=======-----------::--==--======-------------==--------=------:::::::::.:::::::::......::...:::..........:..:...:::..:...:.........."
+                      "...::....:..:..:..:::....:::.::.........:::::..:.....:.::...::::::::.:::::::::..:.:::::-----====--------------:-::---:-----==-----------==-=====----------:--::-::::::......:::......:....:::::::::........:.:.:.......:.............."
+                      ".......:........:............::....::.....:.::.......:...::::.....::...::....:..::::::::---===-------::.::-:--.::-----=---==----------------------------:::--:.:::::::.::...::...:..:...::....:..:::.....::..:.........:.::..........."
+                      ".:...........::........:.........::..::....::::...::::::::::::..:::::.:.:.:..::::..:::.:-=------:::::-::::-.:-:-----===========-------==--------:-.:----:--:::-::..:...:..::::::::....:::.:..::::::.......::..:.......:..:.......:...."
+                      "...:....:..::...::...............:...::....:..:::....:.:.:::.::::...:..:.:::..::.:::::-----::.::.:...---:::-:--=--===--=--=---------===--::-------:-::::--:::::::..:..:::..............::.:::.:.....:.....::.....::..:.::.:::::......."
+                      "...:::.:::.....:::..:::..........:.::..::.......::...............:..::::::::::.::.::----:::::::..::::::--:-----------=--------------=-----------------:::::::..:::::.::::....:..:::.....::.::.::::.:.:...::::...:::.:::...:....:..::.."
+                      ".....:.........:.:...............:::......:......::::::..::...::.......:..:.::.:::::::::...:.::---::.:::-----------------------------:---------:::::::::.:::::::.:.:::....::::.::::.::::.::..:.....:.....:.::........:..:....::..:...."
+                      ".....:.....::....:..:....::........................::..:......:......:::::::::::.::::::.:..:.:::..::..:---::---------:::-------:----:----:::::..::::::..::..::::::::::.:.......:......::..::::...........:.....::.:.....::::.:..:....."
+                      "..:....::::.:...:.:...:......:..................:...........::......::.::::.:..::::::...:::-:....:----:::--:::::.::----::::::---------:.::::-::::::::.:::::::..::.::::....:......:....:....:.....:::::::::...:.::.:..::.:....:.:.::.:."
+                      "...::.......::.::.:..........:..................:.......::...:......::...:..:::::::::::::::-::::::::.:::::----::::::::---:--::---:::--::::::-:-::::::.::::::::.:.....:...::.::...:::......:.......:..:.::.::......:.:....:.......:.::."
+                      ".:.............:..:.:.....::.:.:....:...:..........:....:......::::.:::.::::::::::::::-::.:.:::::..:.::::::::--::::::::::::--::.:::::::--::--:---::::::::...:::::...:....:..:::::::....:::...::..::--:.::..:.:::::::::..::.....:::...."
+                      "....:...:.....:.:.::..::.::....:::......::....::::::::::::::::::::-:::------::::::::...:::::::::::::---::::...::::::.:::.::::----::::::::--::.::-:....:..:..:..:.....::....::..::..:..........::::........::::......:..::........::..."
+                      ".....:::..:::.::.......:.................:...:...::::::::::::::.:--...:::.....:::-:.:...:::::..::::::.::::::.:.::.:::::::::::-::-::::::::::.:::::::::::.:::::..:.::::::::::.:....:::....:........:.:..::.::::.......:..:.......:::...."
+                      "........:..:........:..::......::............::...:.:.:.....:.....::.....:..:::...::.::......:::::::...:::::::::::.::..::::::::::::::.:::..::-::::::::::::::::::::::::..::.......::::..:::....:.:.:.:..:............::................"
+                      "....:...:.::::........::....:...::......::....:..:..:......::::..:..:::..::.:..::::......:::::::.......:...::.::::::::::..:::.:.:::.:::.:.::.:::............:.......:....::.:.:...:.:.....:::.....:.:..:..:::.:::..........:......::.."
+                      "...:::..:..:.........:......::.:........:.:.:..::...:.......:...:....::::.:.:::.::.:..:::..:::.:......::....:.:..:..::::::....::-::::::..:::.::.:...::::...:....:::.:....::.:.::...::.:..........:.:.:......:.:.:...:::.....:.....:..."
+                      "..:::.....:....:.........::..:::.::....::::....:.:..:......:::...::::::::::..::.....::.:......::::::::::.::..:::::::.:..::.::::-:::::::::-:-::::...::...::::::::::.::...::...:.:.:::.:......:........::...::..:::....:::....:........."
+                      "..:.::....:.......:::.........::.......:..::.::::::::::::....:...::::.:::.:::::...::::::::::...::::..:.:.:::::::::::::..::.:::::....::::::.:::::::::.:..:::...:::::::::.:..:::::..:::...:..:::.....:....:::........:.:.:......::..::.."
+                      "..:::........:..:..........:....................:.............::::..::::::.:::::::.:.:::::::::.:::::.....:..::...:.::::::-::::...:.....:...:.:...::..::::::::.....::::::::::.:::.::........::..::::::....:.:..........::...:.:.::::::."
+                      "...........:...............:......:::....::........::::...::.....:::.:::::....:::::....:.....:.....:.:::::..:.::::::.:.:::-:..:...::::::.::...........::..............:.::......:.:::..:............:::::::..........::.......::...:.."
+                      "...........::.......::...:........:.:............::..:::...::..:...:.:.:::::....:.:::::.........:..::::::.:::.::..:::..........::::::::::..:..:..:::....:.........:....:::..::..:::..:......:..........::.:.....::..::.:......::::::.."
+                      ".:...:.........................:...............:.:.....::::.:.::::::..:::::.....::........................:...........::......:::::........:.:......:.......::.:..:..::..:.:::...::::......:....:.:.:......:.:.::....::::.::.......:.."
+                      "...:.......:.:......:::....:..:...........::..::.::::.::...:..::......::...:.................................:...:.:..:::::::::............:::.:....:...:::...::::...::::::..:..............:.....:..:.....:.::.:::........::...::...."
+                      "...........:::.:...........:.:..........::::..:.....:::.:.....::....::........::...:....:..:..........:..........:.:...............::::...............:.:.......:.:.....:.....:...........:...::..........::.:........:::.:::.::......"
+                      "......:.:.::.:.......:..:.:.............::.::...:.:..:::..:::::.:...:........::....:....::....:::....:::::......::::.............::...:.:.........:::.::......::..::..:.....:........::....::::......::::.....:......::.:.:::..::::.:."
+                      "..:.:....:.::...:.......:.::..::::...:..........::::::::..:::..................:.....:.:......:.:::...............................:.::..:......::........::....:......:...............:........:.....:.:::::::........:....:...::.::.."
+                      ".:..:..:..:.:..........:......::::..:...:::....:.....:.::........::.....:::::........:::...:................::......:...................:..:...::.:::...::.:::::.....:....:...:...:....::..............:...:..:..:::...:......:......."
+                      "....::.:...:...........:.:.....:::.:...:....::.....:...........:::......:....:........::.:.....:....::::............::.:....:::........:::....:...:...::...:.::.......:.........:........:...............:.....::.......:.::..:..::..."
+                      "....:.::.::...........:............:......:...:..::.:::...........:...:.........:....:..::...::.:.........:::.:...::...::..........:..:.........:.:::::....:.:..................::....................:.:.:.....:..:...:::...:.:......"
+                      "...::::.:...:::......:.::...:..::.....:::.::::.:.:.........................:::........:.:...:.:.:...:........::::...:::.::....:.:.....:.......:::...:..:::.:.:..:......................::...........:.:...:..::.............::.:...:.."
+                      "......................................................................................................................................................................................................................................"
+))
+(setq forall-banner '("WWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWW"
+                      "WMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMW"
+                      "WMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMW"
+                      "WMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMW"
+                      "WMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMW"
+                      "WMMMMMMMMMMKxOWMMMMMMMMMMMKd0WMMMMMMMMMW"
+                      "WMMMMMMMMMMX:.xWMMMMMMMMM0,,0MMMMMMMMMMW"
+                      "WMMMMMMMMMMMX:.dKKKKKKKKk,,0MMMMMMMMMMMW"
+                      "WMMMMMMMMMMMMX:.,looooo:.'0MMMMMMMMMMMMW"
+                      "WMMMMMMMMMMMMMX:.xWMMM0,,0MMMMMMMMMMMMMW"
+                      "WMMMMMMMMMMMMMMX:.xWM0,'OMMMMMMMMMMMMMMW"
+                      "WMMMMMMMMMMMMMMMX:'ld,'OMMMMMMMMMMMMMMMW"
+                      "WMMMMMMMMMMMMMMMMK;  'OMMMMMMMMMMMMMMMMW"
+                      "WMMMMMMMMMMMMMMMMMKdlOMMMMMMMMMMMMMMMMMW"
+                      "WMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMW"
+                      "WMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMW"
+                      "WMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMW"
+                      "WMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMW"
+                      "WMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMW"
+                      "NWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWN"
                   ))
-       (longest-line (apply #'max (mapcar #'length banner))))
+(defun banner ()
+ (let* ((img #'phaesp-banner)
+       (longest-line (apply #'max (mapcar #'length img))))
    (put-text-property
     (point)
-    (dolist (line banner (point))
+    (dolist (line img (point))
       (insert (+doom-dashboard--center
                +doom-dashboard--width
                (concat line (make-string (max 0 (- longest-line (length line))) 32)))
               "\n"))
     'face 'doom-dashboard-banner)))
 
-(setq +doom-dashboard-ascii-banner-fn #'for-all)
+(setq +doom-dashboard-ascii-banner-fn #'banner)
 #+END_SRC
 * Making predictions and bets
 #+BEGIN_SRC elisp
